--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <header class="container text-center">
         <img src="img/antonio.jpeg" alt="avatar do Antonio" class="rounded-circle" width="350" height="350"
             srcset="">
-        <p class="lead">Eu sou Antonio</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Licenciado em Física. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
-        <p>Minhas habilidades</p>
+        <p class="lead">Eu sou a Laura</p>
+        <h1>Eu estudo programação</h1>
+        <p> Eu estudo no colégio Helena Viana Sundin estou no 1 ano do ensino médio. Irei falar sobre a Ditadura Militar</p>
+        <p></p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
@@ -28,14 +26,14 @@
         </div>
     </header>
     <main class="container mt-5">
-        <center><h2>Meus Projetos Desenvolvidos com Estudantes</h2></center>
+        <center><h2>Ditadura Militar Brasileira</h2></center>
         <div class="row">
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/carro1.jpg" class="card-img-top" alt="Imagem da estetica automotiva">
+                    <img src="img/imagem1.webp" class="card-img-top" alt="Imagem da estetica automotiva">
                     <div class="card-body">
-                        <h5 class="card-title">Camargo Estética Automotiva</h5>
+                        <h5 class="card-title">O que foi?</h5>
                         <p class="card-text">A estética automotiva de carros tem como objetivo aprimorar a aparência e o design dos veículos, proporcionando um visual mais atraente, elegante e personalizado. Esse campo vai além da simples manutenção da limpeza e conservação, envolvendo uma série de processos e técnicas que visam melhorar a estética externa e interna do carro, aumentando seu apelo visual e, em muitos casos, valorizando o automóvel no mercado.
 
                             Entre os principais serviços oferecidos pela estética automotiva, destacam-se a polimento, lavagem detalhada, proteção da pintura, higienização interna, películas e envelopamento, além da restauração de faróis e detalhamento de rodas e pneus. A combinação dessas práticas visa não só a melhoria da aparência, mas também a preservação da qualidade do veículo, protegendo a pintura contra agentes externos como sol, chuva, sujeira e poluição.
