--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="img/imagem1.webp" class="card-img-top" alt="Imagem da estetica automotiva">
                     <div class="card-body">
                         <h5 class="card-title">O que foi?</h5>
-                        <p class="card-text">A ditadura militar brasileira foi um regime autoritário e nacoinal que começou no dia 1 de abril de 1964, e ficou até 15 de março de 1985, sendo conduzido por sucessivos governos militares. O regime teve início com o golpe de Estado de 1964, que depôs o governo João Goulart, eleito democraticamente.[1][2] A ditadura terminou formalmente em 1985, quando José Sarney assumiu a presidência, marcando o início da chamada Nova República.
+                        <p class="card-text">A ditadura militar brasileira foi um regime autoritário e político no qual membros das Forças Armadas de um país centralizaram a política e administraram o poder do  estado em suas mãos. Ela começou no dia 1 de abril de 1964, e persistiu até 15 de março de 1985, sendo governado por vários presidentes militares. O regime teve início com o golpe de Estado de 1964, que depôs o governo João Goulart. A ditadura terminou formalmente em 1985, quando José Sarney assumiu a presidência, marcando o início da chamada Nova República.
                         </p>   
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
